@@ -23,6 +23,9 @@ PyKota NEWS :
        
     - 1.23alpha3 :
     
+        - The destination link for the logo used in CGI scripts is 
+          configurable.
+          
         - Data dumper improved : it's faster and now datas are correctly 
           escaped.
         
